{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 78,
  "lineage": "585e6727-5089-8a37-c427-ad5c054c6489",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-0f7dbd16bfa5de602",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7dbd16bfa5de602",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a664bf412d0fc19",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-18-212-223-3.compute-1.amazonaws.com",
            "public_ip": "18.212.223.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-076d3cd9722514145",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a88de64b24042ab",
            "tags": {
              "Name": "ansible-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "ansible-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0445f64b3b4000b07"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.ansible-sg",
            "aws_subnet.ecommerce-project-pub-1",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "databases-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-0bc1e911a2ea132cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc1e911a2ea132cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d2b23e2a865aa36",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-54-174-214-94.compute-1.amazonaws.com",
            "public_ip": "54.174.214.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04741de3158558c36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a88de64b24042ab",
            "tags": {
              "Name": "databases-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "databases-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07683fea1d587d431"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.databases-sg",
            "aws_subnet.ecommerce-project-pub-1",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "front-app-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-00e42a0e3217f2193",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e42a0e3217f2193",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0b6dd8ceb67ddd7",
            "private_dns": "ip-10-0-1-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.207",
            "public_dns": "ec2-107-21-76-202.compute-1.amazonaws.com",
            "public_ip": "107.21.76.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0057174088b842935",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a88de64b24042ab",
            "tags": {
              "Name": "front-app-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "front-app-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07dcdbb717b11745b"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.front-app-sg",
            "aws_subnet.ecommerce-project-pub-1",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-0f6f9480036461509",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6f9480036461509",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e9d7e58fe1e81f1",
            "private_dns": "ip-10-0-2-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.204",
            "public_dns": "ec2-100-24-62-192.compute-1.amazonaws.com",
            "public_ip": "100.24.62.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01298f88789f74ad4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047e9073cb1ceaeb1",
            "tags": {
              "Name": "grafana-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "grafana-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01abe457613bd75e0"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.grafana-sg",
            "aws_subnet.ecommerce-project-pub-2",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecommerce-project-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:internet-gateway/igw-0ab52656ad5b37666",
            "id": "igw-0ab52656ad5b37666",
            "owner_id": "741692307640",
            "tags": {
              "Name": "ecommerce-project-IGW"
            },
            "tags_all": {
              "Name": "ecommerce-project-IGW"
            },
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecommerce-project-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:route-table/rtb-0ef50ec1038b9dbd9",
            "id": "rtb-0ef50ec1038b9dbd9",
            "owner_id": "741692307640",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab52656ad5b37666",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-project-pub-RT"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce-project-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033ab243871584c1b",
            "route_table_id": "rtb-0ef50ec1038b9dbd9",
            "subnet_id": "subnet-09a88de64b24042ab"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_route_table.ecommerce-project-pub-RT",
            "aws_subnet.ecommerce-project-pub-1",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce-project-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097adf37c0ec6680c",
            "route_table_id": "rtb-0ef50ec1038b9dbd9",
            "subnet_id": "subnet-047e9073cb1ceaeb1"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_route_table.ecommerce-project-pub-RT",
            "aws_subnet.ecommerce-project-pub-2",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce-project-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba2822cfc9c2b70f",
            "route_table_id": "rtb-0ef50ec1038b9dbd9",
            "subnet_id": "subnet-0b3f74b0df9f11c44"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_route_table.ecommerce-project-pub-RT",
            "aws_subnet.ecommerce-project-pub-3",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-0445f64b3b4000b07",
            "description": "Group for ansible",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0445f64b3b4000b07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-sg"
            },
            "tags_all": {
              "Name": "ansible-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databases-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-07683fea1d587d431",
            "description": "Group for databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07683fea1d587d431",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mongo Port",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Postgres Port",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "databases-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "databases-sg"
            },
            "tags_all": {
              "Name": "databases-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-07dcdbb717b11745b",
            "description": "Group for front-app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dcdbb717b11745b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ecommerce-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-01abe457613bd75e0",
            "description": "Group for grafana",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01abe457613bd75e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grafana-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grafana-sg"
            },
            "tags_all": {
              "Name": "grafana-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-0387f5680ed0de769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0387f5680ed0de769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-priv-1"
            },
            "tags_all": {
              "Name": "ecommerce-project-priv-1"
            },
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-0285a73f23181b1de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0285a73f23181b1de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-priv-2"
            },
            "tags_all": {
              "Name": "ecommerce-project-priv-2"
            },
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-086804434874ed983",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086804434874ed983",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-priv-3"
            },
            "tags_all": {
              "Name": "ecommerce-project-priv-3"
            },
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-09a88de64b24042ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a88de64b24042ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-pub-1"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-1"
            },
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-047e9073cb1ceaeb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047e9073cb1ceaeb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-pub-2"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-2"
            },
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-0b3f74b0df9f11c44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3f74b0df9f11c44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-pub-3"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-3"
            },
            "vpc_id": "vpc-0495ce82a80a5f0d2"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecommerce-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:vpc/vpc-0495ce82a80a5f0d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b42e5f38d1d7f94",
            "default_route_table_id": "rtb-0e5ad12447f2e27a9",
            "default_security_group_id": "sg-093eb73910ce71908",
            "dhcp_options_id": "dopt-057b611ca2ba95f7d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0495ce82a80a5f0d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5ad12447f2e27a9",
            "owner_id": "741692307640",
            "tags": {
              "Name": "ecommerce"
            },
            "tags_all": {
              "Name": "ecommerce"
            }
          }
        }
      ]
    }
  ]
}